--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,8 +3,9 @@
     <name>S3 Support</name>
     <vendor email="nik_makarov@yahoo.com" url="http://makarov.info/">Nikita Makarov</vendor>
     <description>Tool for support and manage S3 buckets/objects by your IDE</description>
+    <change-notes>Pagination support + bug fixes + supported range changed</change-notes>
     <depends>com.intellij.modules.lang</depends>
-
+    <idea-version since-build="162.*"/>
     <application-components>
         <component>
             <implementation-class>info.makarov.s3.ApplicationComponent</implementation-class>
@@ -18,12 +19,10 @@
         <!--        <applicationConfigurable groupId="tools" displayName="S3 Support plugin"-->
         <!--                                 id="preference.S3Configurable"-->
         <!--                                 instance="info.makarov.s3.ui.config.S3Configurable"/>-->
-        <applicationService serviceInterface="info.makarov.s3.core.service.BucketService"
-                            serviceImplementation="info.makarov.s3.core.service.BucketService"/>
-        <applicationService serviceInterface="info.makarov.s3.core.service.PreferencesService"
-                            serviceImplementation="info.makarov.s3.core.service.PreferencesService"/>
-        <applicationService serviceInterface="info.makarov.s3.core.service.TreeService"
-                            serviceImplementation="info.makarov.s3.core.service.TreeService"/>
+        <applicationService serviceImplementation="info.makarov.s3.core.service.BucketService"/>
+        <applicationService serviceImplementation="info.makarov.s3.core.service.PreferencesService"/>
+        <applicationService serviceImplementation="info.makarov.s3.core.service.LazyTreeService"/>
+        <applicationService serviceImplementation="info.makarov.s3.ui.factory.ContextMenuItemsFactory"/>
     </extensions>
 
 </idea-plugin>
