--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,20 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 group 'info.makarov'
-version '0.3.0'
+version '0.3.1'
+
+intellij {
+    version '2019.2'
+}
+patchPluginXml {
+    changeNotes """
+      In the release:
+      <ul>
+        <li>Pagination support</li>
+        <li>Bug fixes</li>
+      </ul>
+    """
+}
 
 repositories {
     mavenCentral()
