--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.9.9')
     implementation 'software.amazon.awssdk:kinesis'
     compile group: 'software.amazon.awssdk', name: 's3'
+    compile group: 'software.amazon.awssdk', name: 'apache-client'
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
